[gd_scene load_steps=18 format=2]

[ext_resource path="res://components/GUI/GUI.gd" type="Script" id=1]
[ext_resource path="res://assets/general/button-home.png" type="Texture" id=2]
[ext_resource path="res://assets/general/button-back.png" type="Texture" id=3]
[ext_resource path="res://assets/general/button-next.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/audio_button.mp3" type="AudioStream" id=5]
[ext_resource path="res://assets/fonts/Lato-MediumItalic.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/general/tronco.png" type="Texture" id=7]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 35
font_data = ExtResource( 6 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="button-home" type="Button" parent="."]
margin_left = 1747.0
margin_top = 22.0
margin_right = 1897.0
margin_bottom = 172.0
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
flat = true
icon_align = 1
expand_icon = true

[node name="button-next" type="Button" parent="."]
margin_left = 1761.0
margin_top = 920.0
margin_right = 1911.0
margin_bottom = 1070.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 3 )
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="button-back" type="Button" parent="."]
margin_left = 13.0
margin_top = 912.0
margin_right = 163.0
margin_bottom = 1062.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 10 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="audio-click-button" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="numPage1" type="TextureRect" parent="."]
margin_left = 440.0
margin_top = 960.0
margin_right = 520.0
margin_bottom = 1040.0
texture = ExtResource( 7 )
expand = true

[node name="numPage2" type="TextureRect" parent="."]
margin_left = 1400.0
margin_top = 960.0
margin_right = 1480.0
margin_bottom = 1040.0
texture = ExtResource( 7 )
expand = true

[node name="label-page1" type="Label" parent="."]
margin_left = 443.0
margin_top = 961.0
margin_right = 519.0
margin_bottom = 1037.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "01"
align = 1
valign = 1

[node name="label-page2" type="Label" parent="."]
margin_left = 1405.0
margin_top = 962.0
margin_right = 1476.0
margin_bottom = 1036.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "01"
align = 1
valign = 1

[connection signal="pressed" from="button-home" to="." method="_on_buttonhome_pressed"]
[connection signal="pressed" from="button-next" to="." method="_on_buttonnext_pressed"]
[connection signal="pressed" from="button-back" to="." method="_on_buttonback_pressed"]
